utoipa-gen/tests/snapshots/schema_generics__rc_schema_high_order_types.snap
---
source: utoipa-gen/tests/schema_generics.rs
expression: api
snapshot_kind: text
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "title",
    "version": "version"
  },
  "paths": {},
  "components": {
    "schemas": {
      "HighArc": {
        "$ref": "#/components/schemas/High_Arc_i32"
      },
      "HighRc": {
        "$ref": "#/components/schemas/High_Rc_i32"
      },
      "High_Arc_i32": {
        "type": "object",
        "required": [
          "high"
        ],
        "properties": {
          "high": {
            "type": "integer",
            "format": "int32"
          }
        }
      },
      "High_Rc_i32": {
        "type": "object",
        "required": [
          "high"
        ],
        "properties": {
          "high": {
            "type": "integer",
            "format": "int32"
          }
        }
      }
    }
  }
}
