utoipa-gen/tests/snapshots/schema_generics__schema_with_non_generic_root.snap
---
source: utoipa-gen/tests/schema_generics.rs
assertion_line: 167
expression: api
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "title",
    "version": "version"
  },
  "paths": {},
  "components": {
    "schemas": {
      "Bar_String": {
        "type": "object",
        "required": [
          "value"
        ],
        "properties": {
          "value": {
            "type": "string"
          }
        }
      },
      "Bar_i32": {
        "type": "object",
        "required": [
          "value"
        ],
        "properties": {
          "value": {
            "type": "integer",
            "format": "int32"
          }
        }
      },
      "Foo_String": {
        "type": "object",
        "required": [
          "bar"
        ],
        "properties": {
          "bar": {
            "$ref": "#/components/schemas/Bar_String"
          }
        }
      },
      "Foo_i32": {
        "type": "object",
        "required": [
          "bar"
        ],
        "properties": {
          "bar": {
            "$ref": "#/components/schemas/Bar_i32"
          }
        }
      },
      "Top": {
        "type": "object",
        "required": [
          "foo1",
          "foo2"
        ],
        "properties": {
          "foo1": {
            "$ref": "#/components/schemas/Foo_String"
          },
          "foo2": {
            "$ref": "#/components/schemas/Foo_i32"
          }
        }
      }
    }
  }
}
