utoipa-gen/tests/snapshots/schema_generics__uuid_type_generic_argument.snap
---
source: utoipa-gen/tests/schema_generics.rs
expression: api
snapshot_kind: text
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "title",
    "version": "version"
  },
  "paths": {},
  "components": {
    "schemas": {
      "HighUuid": {
        "$ref": "#/components/schemas/High_Option_String"
      },
      "High_Option_String": {
        "type": "object",
        "required": [
          "high"
        ],
        "properties": {
          "high": {
            "oneOf": [
              {
                "type": "null"
              },
              {
                "type": "string"
              }
            ]
          }
        }
      }
    }
  }
}
